# github-ruleset-auditor

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASING.md  github_ruleset_auditor.py  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
docs/: CUSTOMIZATION.md
tests/: __init__.py  test_auditor.py
