[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "github-ruleset-auditor"
version = "1.0.0"
description = "Audit and enforce branch protection rules across all your GitHub repositories"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Philip A Senger", email = "philip.a.senger@example.com"}
]
keywords = [
    "github",
    "branch-protection",
    "rulesets",
    "security",
    "audit",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Security",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/psenger/github-ruleset-auditor"
Repository = "https://github.com/psenger/github-ruleset-auditor"
Issues = "https://github.com/psenger/github-ruleset-auditor/issues"
Changelog = "https://github.com/psenger/github-ruleset-auditor/blob/main/CHANGELOG.md"

[project.scripts]
# This creates the executable command
github-ruleset-auditor = "github_ruleset_auditor:main"

[tool.setuptools]
py-modules = ["github_ruleset_auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["github_ruleset_auditor"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
